Git Deployment detail view
